--- a/hw17.css
+++ b/hw17.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     padding: 0;
     background-color: lightgreen;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 .container{
     width: 70%;
